--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dev_dependencies:
   path_provider: ^2.0.8
   fluttertoast: ^8.0.8
   http: ^0.13.3
-  get: ^4.6.1
+  get: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
