--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
    <application
         android:label="reservationapp"
         android:name="${applicationName}"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
+       
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
